<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/arrive"
        android:layout_weight="1"
        android:background="@color/green"
        android:textColor="@color/white"
        android:text="@string/checked"
        android:textSize="18sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/askforleave"
        android:layout_weight="1"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:text="@string/askforleave"
        android:textSize="18sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/absence"
        android:layout_weight="1"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/unchecked"
        android:textSize="18sp"/>

</LinearLayout>