<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:background="@drawable/editview">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/window_title"
        android:text="title"
        android:textColor="@color/maincolor_checked"
        android:textSize="16sp"
        android:gravity="center"
        android:padding="12dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/graywhite"/>

    <Button
        android:id="@+id/arrive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checked"
        android:textSize="18sp"
        android:background="@color/white"
        android:textColor="@color/green"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/graywhite"/>

    <Button
        android:id="@+id/late"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/be_late"
        android:textSize="18sp"
        android:background="@color/white"
        android:textColor="@color/yellow"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/graywhite"/>

    <Button
        android:id="@+id/askforleave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/askforleave"
        android:textSize="18sp"
        android:background="@color/white"
        android:textColor="@color/blue"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/graywhite"/>

    <Button
        android:id="@+id/absence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unchecked"
        android:textSize="18sp"
        android:background="@color/white"
        android:textColor="@color/red"/>

</LinearLayout>