<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:topbar="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yannis.dianming.activity.SignDetailActivity">

    <com.example.yannis.dianming.widget.Topbar
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/topbar"
        topbar:leftText="@string/back"
        topbar:rightText1="@string/rollcall"
        topbar:rightText2="@string/history_records"
        topbar:leftMargin="10dp"
        topbar:rightMargin1="20dp"
        topbar:rightMargin2="10dp"
        topbar:leftSize="8sp"
        topbar:rightSize="8sp"
        topbar:textColor="@drawable/maincolor_selector">
    </com.example.yannis.dianming.widget.Topbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_name"
        android:background="@color/graywhite"
        android:text="课程名"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="12dp"/>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">
    </com.github.mikephil.charting.charts.PieChart>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/graywhite"
        android:layout_marginTop="10dp"/>

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        app:tabMode="fixed"
        android:id="@+id/tabs"
        app:tabTextColor="@color/lightblack"
        app:tabIndicatorColor="@color/maincolor_checked"
        app:tabSelectedTextColor="@color/maincolor">
    </android.support.design.widget.TabLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lists">
        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>




</LinearLayout>
