<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_percent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graywhite"
    tools:context="com.example.yannis.dianming.activity.SetPercentActivity">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="@color/maincolor" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="课程名"
            android:textSize="18sp"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/maincolor"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/submit"
            android:textColor="@drawable/maincolor_selector" />

    </RelativeLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/graywhite"
        android:layout_below="@+id/title"/>



    <LinearLayout
        android:id="@+id/absenceLayout"
        android:orientation="horizontal"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/abcent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abcent_punish"
            android:textSize="16sp"
            android:layout_marginLeft="12dp"/>
        <EditText
            android:id="@+id/punishEdit"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center"
            android:text="0"
            android:layout_marginLeft="8dp"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分/人/次"
            android:textSize="14sp"
            android:layout_marginLeft="6dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lateLayout"
        android:orientation="horizontal"
        android:layout_below="@+id/absenceLayout"
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/late"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/late_punish"
            android:textSize="16sp"
            android:layout_marginLeft="12dp"/>
        <EditText
            android:id="@+id/latePunishEdit"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center"
            android:text="0"
            android:layout_marginLeft="8dp"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分/人/次"
            android:textSize="14sp"
            android:layout_marginLeft="6dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/leaveLayout"
        android:orientation="horizontal"
        android:layout_below="@+id/lateLayout"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_punish"
            android:textSize="16sp"
            android:layout_marginLeft="12dp"/>
        <EditText
            android:id="@+id/leavePunishEdit"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center"
            android:text="0"
            android:layout_marginLeft="8dp"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分/人/次"
            android:textSize="14sp"
            android:layout_marginLeft="6dp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/signPercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leaveLayout"
        android:background="@color/white"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/typeName"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="考勤占比"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="18dp"
            android:textColor="@color/lightblack"/>

        <EditText
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:id="@+id/signPercentEt"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:hint="00"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:inputType="number"
            android:layout_toLeftOf="@+id/percent"
            android:background="@drawable/circle_selector"
            android:layout_margin="8dp"
            android:padding="2dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percent"
            android:layout_centerVertical="true"
            android:textSize="22sp"
            android:text="%"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:textColor="@color/maincolor"/>
    </RelativeLayout>

    <Button
        android:id="@+id/addType"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/signPercent"
        android:text="添加作业类型"
        android:textColor="@color/lightblack"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/white_btn_selector"/>

    <ListView
        android:id="@+id/typeListview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addType"
        android:layout_marginTop="6dp"
        android:background="@color/white"></ListView>


</RelativeLayout>
